call-center/src/objects/Case_to_Campaign__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialer_Campaign_Name__c</fullName>
        <label>Dialer Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Campaign_Name__c</fullName>
        <label>Salesforce Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case-to-Campaign</label>
    <pluralLabel>Case-to-Campaigns</pluralLabel>
</CustomObject>